2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/Src/Parser/CSharp/Parser.cs: Store the location of field
	  reference expressions.

2006-12-07 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	*  Project/NRefactory.csproj: Removed GlobalAssemblyInfo.cs
	since it is not used.

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* Project/Src/Parser/CSharp/Parser.cs: Store the location
	  of identifiers.

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com> 

	* Makefile.am: Install the assembly in the right place.

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com>

	Imported from SharpDevelop.