@@ -1,0 +1,95 @@
+<Project name="NRefactory" fileversion="2.0" language="C#" clr-version="Net_1_1" ctype="DotNetProject">
+  <Configurations active="Debug">
+    <Configuration name="Debug" ctype="DotNetProjectConfiguration">
+      <Output directory="../../../build/bin" assembly="NRefactory" />
+      <Build debugmode="True" target="Library" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_1_1" />
+      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" win32Icon="./" ctype="CSharpCompilerParameters" />
+    </Configuration>
+    <Configuration name="Release" ctype="DotNetProjectConfiguration">
+      <Output directory="./bin/Release" assembly="NRefactory" />
+      <Build debugmode="False" target="Exe" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_1_1" />
+      <CodeGeneration compiler="Mcs" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+    </Configuration>
+  </Configurations>
+  <Contents>
+    <File name="./Project/Src/Lexer/CSharp/Tokens.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/CSharp/Lexer.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/CSharp/Keywords.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/ILexer.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/VBNet/Tokens.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/VBNet/Lexer.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/VBNet/Keywords.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/LookupTable.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Token.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/AbstractLexer.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Special/CommentType.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Special/PreProcessingDirective.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Special/ISpecial.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Special/Comment.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Special/SpecialTracker.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Special/BlankLine.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Lexer/Special/TagComment.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/CSharp/Parser.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/TypeReference.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/INullable.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/Enums.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/AbstractNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/General/BlockStatement.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/General/PrimitiveExpression.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/General/LocalVariableDeclaration.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/General/Expression.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/General/Statement.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/General/CompilationUnit.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/Generated.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AST/INode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/AbstractParser.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/VBNet/ParamModifier.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/VBNet/Parser.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/ParserFactory.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/IParser.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Modifiers.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Errors.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/CSharpToVBNetConvertVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/IASTVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/VBNetConstructsConvertVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/LookupTableVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/VBNetToCSharpConvertVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/PrefixFieldsVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/ToCSharpConvertVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/ToVBNetConvertVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/AbstractAstTransformer.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/CSharpConstructsVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Parser/Visitors/AbstractASTVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/CSharp/PrettyPrintOptions.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/CSharp/CSharpOutputVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/CSharp/OutputFormatter.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/AbstractPrettyPrintOptions.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/VBNet/VBNetOutputVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/VBNet/VBNetPrettyPrintOptions.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/VBNet/VBNetOutputFormatter.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/NodeInformVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/CodeDOM/CodeDOMVerboseOutputGenerator.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/CodeDOM/CodeDOMOutputVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/AbstractOutputFormatter.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/SpecialNodesInserter.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/IOutputASTVisitor.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Src/Output/EnvironmentInformationProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Project/Configuration/AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
+  </Contents>
+  <References>
+    <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Gac" localcopy="True" refto="System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  </References>
+  <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" ExecuteTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../../" OutputDirVar="" AssemblyNameVar="">
+    <BuildFilesVar Sync="True" Name="FILES" />
+    <DeployFilesVar />
+    <ResourcesVar />
+    <OthersVar />
+    <GacRefVar Name="REFS" Prefix="-r:" />
+    <AsmRefVar Name="REFS" Prefix="-r:" />
+    <ProjectRefVar Name="REFS" Prefix="-r:" />
+  </MonoDevelop.Autotools.MakefileInfo>
+</Project>
